--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "cheerio": "latest",
     "debug": "~2.2.0",
     "dotenv": "^1.2.0",
     "express": "~4.13.1",
@@ -17,6 +18,7 @@
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0",
+    "request": "latest",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
