--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
     "cheerio": "latest",
+    "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "dotenv": "^1.2.0",
     "express": "~4.13.1",
     "express-session": "^1.11.3",
     "mongoose": "^4.1.10",
     "morgan": "~1.6.1",
+    "oclazyload": "^1.0.6",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0",
