added mongodb labs for heroku

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost/node-beer
+MONGO_URI=mongodb://heroku_1mpkwb9w:helur6684mtotv8b0aik0itjq@ds047315.mongolab.com:47315/heroku_1mpkwb9w
